envoy-headers-body-transformation/lua-filter/docker/envoy.yaml
admin:
  access_log_path: /dev/null
  address:
    socket_address:
      address: 127.0.0.1
      port_value: 9000

node:
  cluster: service_greeter
  id: test-id

static_resources:
  secrets:
    - name: mediation_ca_cert
      validation_context:
        trusted_ca:
          filename: /certs/ca.crt
  listeners:
    - name: http_listener
      address:
        socket_address:
          address: 0.0.0.0
          port_value: 8080
      filter_chains:
        - filters:
            - name: envoy.filters.network.http_connection_manager
              typed_config:
                "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
                stat_prefix: ingress_http
                codec_type: AUTO
                route_config:
                  name: local_route
                  virtual_hosts:
                    - name: local_service
                      domains:
                        - "*"
                      routes:
                        - match:
                            prefix: "/"
                          route:
                            timeout: 100000s
                            cluster: service_httpbin
                        - match:
                            prefix: "/without"
                          route:
                            timeout: 100000s
                            cluster: ballerina-backend-without
                          typed_per_filter_config:
                            envoy.filters.http.lua:
                              "@type": type.googleapis.com/envoy.extensions.filters.http.lua.v3.LuaPerRoute
                              disabled: true
                  internal_only_headers:
                    - isadmin
                http_filters:
                  - name: envoy.filters.http.lua.mediation
                    typed_config:
                      "@type": type.googleapis.com/envoy.extensions.filters.http.lua.v3.Lua
                      inline_code: |
                        function getActionHeaderKey(header,action)
                            local action_len = string.len(action)
                            if string.sub(header,1,action_len)==action then
                                return true, string.sub(header,action_len+1,string.len(header)+1)
                            end
                            return false, nil
                        end

                        function envoy_on_request(request_handle)
                            request_handle:logInfo("Hello Lua1")
                            local request_headers = request_handle:headers()
                            local request_headers_table = {}
                            for key, value in pairs(request_headers) do
                                request_handle:logInfo("Lua1 Request Headers: " .. key .. "->" .. value)
                                request_headers_table[key] = value
                            end
                            local request_body = request_handle:body():getBytes(0, request_handle:body():length())

                            request_handle:logInfo("Lua1 Request Body: " .. request_body)

                            local x_wso2_context_key = "x-wso2-context"
                            request_headers_table[x_wso2_context_key .. "-method"] = request_headers_table[":method"]
                            request_headers_table[x_wso2_context_key .. "-path"] = request_headers_table[":path"]
                            request_headers_table[":method"] = "POST"
                            request_headers_table[":path"] = "/handlerequest"

                            local mediation_headers, mediation_body = request_handle:httpCall(
                                "ballerina_service",
                                request_headers_table,
                                request_body,
                                100000,
                                false
                            )
                            request_handle:logInfo("Lua1: Done Mediation HTTP Call")
                            request_handle:logInfo("Lua1: Mediation body: " .. mediation_body)

                            local content_length = request_handle:body():setBytes(mediation_body)
                            request_handle:headers():replace("content-length", content_length)

                            local x_add = "x-wso2-add-"
                            local x_remove = "x-wso2-remove-"

                            local actions = {
                                ["x-wso2-add-"] = function (k,v)
                                  request_handle:headers():add(k,v)
                              end,
                                ["x-wso2-remove-"] = function (k,v)
                                  request_handle:headers():remove(k)
                              end,
                            }
                            
                            for k, v in pairs(mediation_headers) do
                                for act_str, act in pairs(actions) do
                                    local action_len = string.len(act_str)
                                    local is_action, updated_key = getActionHeaderKey(k, act_str)
                                    if is_action then
                                      act(updated_key,v)
                                      break
                                    end
                                end

                                -- local is_action, updated_key = getActionHeaderKey(k, x_add)
                                -- if is_action then
                                --     request_handle:headers():add(updated_key,v)
                                -- else
                                --     is_action, updated_key = getActionHeaderKey(k, x_remove)
                                --     if is_action then
                                --         request_handle:headers():remove(updated_key)
                                --     end
                                -- end
                            end
                        end

                        function envoy_on_response(response_handle)
                            response_handle:logInfo("Bye Lua1")
                        end



                  - name: envoy.filters.http.router

  clusters:
    - name: service_httpbin
      connect_timeout: 200s
      type: LOGICAL_DNS
      dns_lookup_family: V4_ONLY
      lb_policy: ROUND_ROBIN
      load_assignment:
        cluster_name: service_httpbin
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address:
                      address: httpbin.org
                      port_value: 80
    - name: ballerina_service
      connect_timeout: 200s
      type: LOGICAL_DNS
      dns_lookup_family: V4_ONLY
      lb_policy: ROUND_ROBIN
      load_assignment:
        cluster_name: ballerina_service
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address:
                      address: mediation-service-host
                      port_value: 9090
      transport_socket:
        name: envoy.transport_sockets.tls
        typed_config:
          "@type": type.googleapis.com/envoy.extensions.transport_sockets.tls.v3.UpstreamTlsContext
          sni: mediation-service-host
          common_tls_context:
            validation_context_sds_secret_config:
              name: mediation_ca_cert
    - name: ballerina-backend-lua
      connect_timeout: 200s
      type: LOGICAL_DNS
      dns_lookup_family: V4_ONLY
      lb_policy: ROUND_ROBIN
      load_assignment:
        cluster_name: ballerina-backend-lua
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address:
                      address: 192.168.8.132
                      port_value: 9091
    - name: ballerina-backend-without
      connect_timeout: 200s
      type: LOGICAL_DNS
      dns_lookup_family: V4_ONLY
      lb_policy: ROUND_ROBIN
      load_assignment:
        cluster_name: ballerina-backend-without
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address:
                      address: 192.168.8.132
                      port_value: 9092
